Fjerner guava fra basta main