@@ -3,24 +3,24 @@ package no.nav.aura.basta.backend.vmware.orchestrator;
 import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import no.nav.aura.basta.backend.vmware.orchestrator.request.OrchestatorRequest;
 import no.nav.aura.basta.backend.vmware.orchestrator.request.ProvisionRequest;
-import no.nav.aura.basta.util.SerializableFunction;
 import no.nav.aura.basta.util.XmlUtils;
 
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
 
 public class OrchestratorUtil {
-    public static ImmutableList<String> stripFqdnFromHostnames(String[] hostnames) {
-        return FluentIterable.from(Arrays.asList(hostnames))
-                       .transform(new SerializableFunction<String, String>() {
-                           public String process(String input) {
-                               int idx = input.indexOf('.');
-                               return input.substring(0, idx != -1 ? idx : input.length());
-                           }
-                       }).toList();
+    public static List<String> stripFqdnFromHostnames(String... hostnames) {
+        
+        return Arrays.asList(hostnames).stream()
+                .map(hostname -> extractHostName(hostname))
+                .collect(Collectors.toList());
+    }
+
+    private static String extractHostName(String input) {
+        int idx = input.indexOf('.');
+        return input.substring(0, idx != -1 ? idx : input.length());
     }
 
     public static String censore(OrchestatorRequest request) {
